Minor adjustments and updated dependencies

--- a/src/main/resources/eu/hansolo/applefx/apple.css
+++ b/src/main/resources/eu/hansolo/applefx/apple.css
@@ -114,7 +114,7 @@
     -control-background-color-dark: -CONTROL-BACKGROUND-DARK;
     -control-border-color-dark    : -CONTROL-BORDER-DARK;
 
-    -header-height                : -HEADER-HEIGHT-STANDARD;
+    -header-height                : -HEADER-HEIGHT-DOUBLE;
 }
 
 
