--- a/src/main/resources/eu/hansolo/applefx/apple.css
+++ b/src/main/resources/eu/hansolo/applefx/apple.css
@@ -117,7 +117,7 @@
 
     /* VARIABLE DEFINITIONS */
     -accent-color                 : -BLUE-AQUA;
-    -focus-color                  : -BLUE-AQUA-HIGHLIGHT;
+    -highlight-color              : -BLUE-AQUA-HIGHLIGHT;
     -background-color             : -BACKGROUND-AQUA;
     -pane-background-color        : -PANE-BACKGROUND-AQUA;
     -text-color                   : -TEXT-AQUA;
@@ -126,7 +126,7 @@
     -control-border-color         : -CONTROL-BORDER-AQUA;
 
     -accent-color-dark            : -BLUE-DARK;
-    -focus-color-dark             : -BLUE-DARK-HIGHLIGHT;
+    -highlight-color-dark         : -BLUE-DARK-HIGHLIGHT;
     -background-color-dark        : -BACKGROUND-DARK;
     -pane-background-color-dark   : -PANE-BACKGROUND-DARK;
     -text-color-dark              : -TEXT-DARK;
@@ -561,7 +561,8 @@
     -fx-content-display  : LEFT;
 }
 .macos-button:def:window-focus-lost {
-    -fx-background-color       : linear-gradient(to bottom, rgb(211, 210, 210) 0%, rgb(183, 182, 182) 100%), -WHITE;
+    -fx-background-color: linear-gradient(to bottom, rgb(211, 210, 210) 0%, rgb(183, 182, 182) 100%), -WHITE;
+    -fx-text-fill       : -text-color;
 }
 .macos-button:armed {
     -fx-pref-height      : 20;
@@ -594,33 +595,19 @@
     -fx-pref-height      : 20;
     -fx-background-color : linear-gradient(to bottom, rgb(136, 132, 132) 0%, rgb(26, 20, 21) 100%), -control-background-color-dark;
     -fx-background-insets: 0, 0.5 0 0 0;
-    -fx-background-radius: 5, 4;
-    -fx-padding          : 2 10 2 10;
     -fx-text-fill        : -text-color-dark;
-    -fx-alignment        : CENTER;
-    -fx-content-display  : LEFT;
-    -fx-font-family      : 'SF Pro Regular';
-    -fx-font-size        : 13px;
 }
 .macos-button:dark:armed {
     -fx-pref-height      : 20;
     -fx-background-color : derive(-control-background-color-dark, +10%), derive(-control-background-color-dark, +20%);
     -fx-background-insets: 0, 0.5 0 0 0;
-    -fx-background-radius: 5, 4;
-    -fx-padding          : 2 10 2 10;
     -fx-text-fill        : -text-color-dark;
-    -fx-alignment        : CENTER;
-    -fx-content-display  : LEFT;
 }
 .macos-button:dark:def {
     -fx-pref-height      : 20;
     -fx-background-color : derive(-accent-color-dark, 10%), linear-gradient(to bottom, -accent-color-dark 0%, derive(-accent-color-dark, -20%) 100%);
     -fx-background-insets: 0, 0.5 0 0 0;
-    -fx-background-radius: 5, 4;
-    -fx-padding          : 2 10 2 10;
     -fx-text-fill        : -text-color-dark;
-    -fx-alignment        : CENTER;
-    -fx-content-display  : LEFT;
 }
 .macos-button:dark:def:window-focus-lost {
     -fx-background-color : linear-gradient(to bottom, rgb(136, 132, 132) 0%, rgb(26, 20, 21) 100%), -control-background-color-dark;
@@ -629,11 +616,7 @@
     -fx-pref-height      : 20;
     -fx-background-color : derive(-accent-color-dark, 20%), linear-gradient(to bottom, derive(-accent-color-dark, 10%) 0%, derive(-accent-color-dark, -10%) 100%);
     -fx-background-insets: 0, 0.5 0 0 0;
-    -fx-background-radius: 5, 4;
-    -fx-padding          : 2 10 2 10;
     -fx-text-fill        : -text-color-dark;
-    -fx-alignment        : CENTER;
-    -fx-content-display  : LEFT;
 }
 .macos-button:dark:disabled {
     -fx-background-color: -disabled-color;
@@ -805,12 +788,11 @@
 /* TextField */
 .macos-text-field {
     -fx-control-inner-background: rgb(242, 242, 242);
-    -fx-focus-color             : -focus-color; /*-accent-color;*/
+    -fx-focus-color             : -highlight-color;
     -fx-text-fill               : black;
     -fx-highlight-fill          : derive(-fx-control-inner-background,-20%);
     -fx-highlight-text-fill     : -fx-text-inner-color;
     -fx-prompt-text-fill        : derive(-fx-control-inner-background,-30%);
-    /*-fx-background-color        : linear-gradient(to bottom, rgba(0, 0, 0, 0.03) 0%, rgba(255, 255, 255, 0.29) 1%, rgba(255, 255, 255, 0.29) 99%, rgba(0, 0, 0, 0.25) 100%), -fx-control-inner-background;*/
     -fx-background-color        : rgb(229, 229, 229), -fx-control-inner-background;
     -fx-background-insets       : 0, 1;
     -fx-background-radius       : 0, 0;
@@ -818,10 +800,9 @@
     -fx-padding                 : 4 7 4 7;
 }
 .macos-text-field:focused {
-    -fx-faint-focus-color  : -focus-color;
-    -fx-highlight-fill     : -accent-color;
+    -fx-faint-focus-color  : -highlight-color;
+    -fx-highlight-fill     : -highlight-color;
     -fx-highlight-text-fill: white;
-    /*-fx-background-color   : -fx-focus-color, -fx-focus-color, -fx-faint-focus-color, linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);*/
     -fx-background-color   : -fx-faint-focus-color, -fx-faint-focus-color, -fx-faint-focus-color, linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);
     -fx-background-insets  : -0.5, 0, 1, 3;
     -fx-background-radius  : 4, 3, 2, 0;
@@ -830,7 +811,7 @@
 
 .macos-text-field:dark {
     -fx-control-inner-background: -control-background-color-dark;
-    -fx-focus-color             : -focus-color-dark; /*-accent-color-dark;*/
+    -fx-focus-color             : -highlight-color-dark;
     -fx-text-fill               : -text-color-dark;
     -fx-highlight-fill          : derive(-fx-control-inner-background,+20%);
     -fx-highlight-text-fill     : -fx-text-inner-color;
@@ -839,11 +820,11 @@
     -fx-background-insets       : 0, 2 1 2 1;
     -fx-background-radius       : 0, 0;
     -fx-cursor                  : text;
-    -fx-padding                 : 0.333333em 0.583em 0.333333em 0.583em; /* 4 7 4 7 */
+    -fx-padding                 : 4 7 4 7;
 }
 .macos-text-field:dark:focused {
-    -fx-faint-focus-color  : -focus-color-dark;
-    -fx-highlight-fill     : -accent-color-dark;
+    -fx-faint-focus-color  : -highlight-color-dark;
+    -fx-highlight-fill     : -highlight-color-dark;
     -fx-highlight-text-fill: -text-color-dark;
     -fx-background-color   : -fx-faint-focus-color, -fx-faint-focus-color, -fx-faint-focus-color, linear-gradient(from 0px 0px to 0px 5px, derive(-fx-control-inner-background, -9%), -fx-control-inner-background);
     -fx-background-insets  : -0.2, 1, -1.4, 3;
@@ -1756,4 +1737,82 @@
     -fx-background-color : -HEADER-BACKGROUND-DARK, -accent-color-dark;
     -fx-background-insets: 0, 2;
     -fx-background-radius: 0, 4;
+}
+
+
+/* ToggleButton */
+.macos-toggle-button,
+.macos-toggle-button:focused,
+.macos-toggle-button:window-focus-lost {
+    -fx-background-color : transparent;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 0;
+    -fx-padding          : 2 4 2 4;
+    -fx-text-fill        : -text-color;
+    -fx-alignment        : CENTER;
+    -fx-content-display  : CENTER;
+}
+.macos-toggle-button:selected,
+.macos-toggle-button:selected:focused {
+    -fx-background-color : linear-gradient(to bottom, rgb(203, 202, 202) 0%, rgb(208, 207, 207) 10%, rgb(200, 198, 198) 90%, rgb(175, 174, 174) 100%), rgb(255, 255, 255);
+    -fx-background-radius: 5, 4;
+}
+.macos-toggle-button:pressed,
+.macos-toggle-button:pressed:selected {
+    -fx-background-color : linear-gradient(to bottom, rgb(183, 182, 182) 0%, rgb(153, 152, 152) 100%), rgb(240, 240, 240);
+    -fx-background-radius: 5, 4;
+}
+
+.macos-toggle-button:dark,
+.macos-toggle-button:dark:focused,
+.macos-toggle-button:dark:window-focus-lost {
+    -fx-background-color: transparent;
+    -fx-text-fill       : -text-color-dark;
+}
+.macos-toggle-button:dark:selected,
+.macos-toggle-button:dark:selected:focused {
+    -fx-background-color : rgb(105, 103, 103);
+    -fx-background-radius: 5;
+}
+.macos-toggle-button:dark:pressed,
+.macos-toggle-button:dark:pressed:selected {
+    -fx-background-color : rgb(125, 123, 123);
+    -fx-background-radius: 5;
+}
+
+
+/* ToggleButtonBar */
+.macos-toggle-button-bar {
+    -fx-background-color : linear-gradient(to bottom, rgb(199, 198, 198) 0%, rgb(218, 216, 216) 100%),
+                           linear-gradient(to bottom, rgb(222, 221, 221) 0%, rgb(227, 225, 225) 10%, rgb(227, 225, 225) 90%, rgb(222, 221, 221) 100%);
+    -fx-background-radius: 5, 4;
+    -fx-background-insets: 0, 1;
+    -fx-padding          : 1;
+    -fx-fill-height      : true;
+    -fx-spacing          : 3;
+}
+
+.macos-toggle-button-bar:dark {
+    -fx-background-color : linear-gradient(to bottom, rgb(52, 51, 49) 0%, rgb(51, 49, 48) 85%, rgb(81, 80, 78) 100%),
+                           linear-gradient(to bottom, rgb(42, 38, 38) 0%, rgb(46, 43, 42) 100%);
+}
+
+
+/* ToggleButtonBarSeparator */
+.macos-toggle-button-bar-separator {
+    -fx-min-width       : 3;
+    -fx-max-width       : 3;
+    -fx-pref-width      : 3;
+    -fx-min-height      : 22;
+    -fx-max-height      : 22;
+    -fx-pref-height     : 22;
+    -fx-position-shape  : true;
+    -fx-shape           : "M0,0L1,0L1,22L0,22,L0,0z";
+    -fx-border-color    : transparent;
+    -fx-background-insets: 0, 2;
+    -fx-background-color : transparent, linear-gradient(to bottom, transparent 0%, transparent 15%, rgb(207, 205, 205) 15%, rgb(207, 205, 205) 85%, transparent 85%, transparent 100%);
+}
+
+.macos-toggle-button-bar-separator:dark {
+    -fx-background-color : transparent, linear-gradient(to bottom, transparent 0%, transparent 15%, rgb(37, 34, 33) 15%, rgb(37, 34, 33) 85%, transparent 85%, transparent 100%);
 }
