--- a/src/main/resources/eu/hansolo/applefx/apple.css
+++ b/src/main/resources/eu/hansolo/applefx/apple.css
@@ -154,8 +154,9 @@
     -fx-font-size              : 13px;
 }
 .macos-button:def {
+    -button-color        : -accent-color;
     -fx-pref-height      : 20;
-    -fx-background-color : derive(-accent-color, 10%), linear-gradient(to bottom, -accent-color 0%, derive(-accent-color, -20%) 100%);
+    -fx-background-color : derive(-accent-color, 10%), linear-gradient(to bottom, -button-color 0%, derive(-button-color, -20%) 100%);
     -fx-background-insets: 0, 0.5;
     -fx-background-radius: 5, 4;
     -fx-padding          : 2 10 2 10;
@@ -179,7 +180,7 @@
 }
 .macos-button:def:armed {
     -fx-pref-height      : 20;
-    -fx-background-color : -accent-color, linear-gradient(to bottom, derive(-accent-color, -10%) 0%, derive(-accent-color, -30%) 100%);
+    -fx-background-color : -button-color, linear-gradient(to bottom, derive(-button-color, -10%) 0%, derive(-button-color, -30%) 100%);
     -fx-background-insets: 0, 0.5;
     -fx-background-radius: 5, 4;
     -fx-padding          : 2 10 2 10;
@@ -207,8 +208,9 @@
     -fx-text-fill        : -text-color-dark;
 }
 .macos-button:dark:def {
+    -button-color        : -accent-color-dark;
     -fx-pref-height      : 20;
-    -fx-background-color : derive(-accent-color-dark, 10%), linear-gradient(to bottom, -accent-color-dark 0%, derive(-accent-color-dark, -20%) 100%);
+    -fx-background-color : derive(-accent-color-dark, 10%), linear-gradient(to bottom, -button-color 0%, derive(-button-color, -20%) 100%);
     -fx-background-insets: 0, 0.5 0 0 0;
     -fx-text-fill        : -text-color-dark;
 }
@@ -217,7 +219,7 @@
 }
 .macos-button:dark:def:armed {
     -fx-pref-height      : 20;
-    -fx-background-color : derive(-accent-color-dark, 20%), linear-gradient(to bottom, derive(-accent-color-dark, 10%) 0%, derive(-accent-color-dark, -10%) 100%);
+    -fx-background-color : derive(-button-color, 20%), linear-gradient(to bottom, derive(-button-color, 10%) 0%, derive(-button-color, -10%) 100%);
     -fx-background-insets: 0, 0.5 0 0 0;
     -fx-text-fill        : -text-color-dark;
 }
